:recycle: Board 수정에 따른 프론트 코드 변경

--- a/src/main/resources/public/createBoard.html
+++ b/src/main/resources/public/createBoard.html
@@ -76,8 +76,8 @@
 
       var formData = {
         title: $('#title').val(),
-        // subtitle: $('#subtitle').val(),
-        content: $('#content').val()
+        subtitle: $('#subtitle').val(),
+        contents: $('#content').val()
       };
 
       // AJAX 요청을 보내서 게시글 작성
