--- a/src/main/resources/public/selectBoard.html
+++ b/src/main/resources/public/selectBoard.html
@@ -13,6 +13,11 @@
     width: 25%; /* 입력란이 부모 요소의 너비를 모두 차지하도록 함 */
     height: 40px;
   }
+  .reComment{
+    padding: 5px;
+    border-radius: 5px;
+    margin: 5px;
+  }
 </style>
 <body>
 <header>
@@ -33,6 +38,8 @@
   <button id="editButton" class="btn">수정하기</button>
   <!-- 업데이트 버튼 -->
   <button id="updateButton" style="display: none;" class="btn">업데이트</button>
+  <!-- 삭제하기 버튼 -->
+  <button id="deleteButton" class="btn">삭제하기</button>
 
 </div>
 
@@ -65,7 +72,8 @@
       success: function(response) {
         var boardDetailDiv = $("#boardDetail");
         boardDetailDiv.append("<p><strong>제목:</strong> <span id='title'>" + response.title + "</span></p>");
-        boardDetailDiv.append("<p><strong>내용:</strong> <span id='content'>" + response.content + "</span></p>");
+        boardDetailDiv.append("<p><strong>부제목:</strong> <span id='subtitle'>" + response.subtitle + "</span></p>");
+        boardDetailDiv.append("<p><strong>내용:</strong> <span id='content'>" + response.contents + "</span></p>");
         boardDetailDiv.append("<p><strong>작성자:</strong> " + response.author + "</p>");
       },
       error: function(xhr, status, error) {
@@ -78,6 +86,7 @@
     // 수정하기 버튼 클릭 시 수정 가능한 필드로 변경
     $("#editButton").click(function() {
       $("#title").replaceWith("<input type='text' id='titleInput' value='" + $("#title").text() + "'>");
+      $("#subtitle").replaceWith("<input type='text' id='subtitleInput' value='" + $("#subtitle").text() + "'>");
       $("#content").replaceWith("<textarea id='contentInput'>" + $("#content").text() + "</textarea>");
       $(this).hide(); // 수정 버튼 숨기기
       $("#updateButton").show(); // 업데이트 버튼 표시
@@ -86,6 +95,7 @@
     // 업데이트 버튼 클릭 시 서버로 수정된 데이터 전송
     $("#updateButton").click(function() {
       var updatedTitle = $("#titleInput").val();
+      var updatedsubTitle = $("#subtitleInput").val();
       var updatedContent = $("#contentInput").val();
 
       // 수정된 데이터를 AJAX 요청으로 서버에 전송
@@ -93,7 +103,7 @@
         url: "/boards/" + boardId,
         type: "PATCH",
         contentType: "application/json",
-        data: JSON.stringify({ title: updatedTitle, content: updatedContent }),
+        data: JSON.stringify({ title: updatedTitle, contents: updatedContent, subtitle: updatedsubTitle }),
         success: function(response) {
           alert("게시글이 업데이트되었습니다.");
           window.location.reload(); // 페이지 새로고침
@@ -104,6 +114,27 @@
         }
       });
     });
+
+    // 게시글 삭제하기
+    $("#deleteButton").click(function() {
+
+      // 수정된 데이터를 AJAX 요청으로 서버에 전송
+      $.ajax({
+        url: "/boards/" + boardId,
+        type: "DELETE",
+        contentType: "application/json",
+        data: JSON.stringify({}),
+        success: function(response) {
+          alert("게시글이 삭제되었습니다..");
+          window.location.href = "mainpage.html";
+        },
+        error: function(xhr, status, error) {
+          console.error("게시글 업데이트에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+
 
     // 댓글 생성 폼 제출 시
     $("#commentForm").submit(function(event) {
@@ -144,6 +175,13 @@
             // 작성자, 댓글 내용, 수정 및 삭제 버튼을 포함하는 li 요소 생성
             var li = $("<li>");
 
+            var temp = $("<br><br><br>")
+            li.append(temp);
+
+            // 수평선 추가
+            var hr = $("<hr>");
+            li.append(hr);
+
             // 작성자 표시
             var authorDiv = $("<div>").text(comment.nickname);
             li.append(authorDiv);
@@ -171,6 +209,9 @@
             // 대댓글 버튼 추가
             var reCommentButton = $("<button>").text("답글 보기").addClass("reCommentButton");
             li.append(reCommentButton);
+
+            var temp = $("<br>")
+            li.append(temp);
 
             // li 요소에 commentId를 저장합니다.
             li.attr("data-id", comment.commentId);
@@ -262,6 +303,7 @@
       // 해당 대댓글 버튼을 누른 댓글 아래에 대댓글 입력 폼 추가
       var reCommentForm = $("<form>").addClass("reCommentForm");
       reCommentForm.attr("data-comment-id", commentId); // 대댓글이 속한 댓글의 ID 저장
+      reCommentForm.append("<h2>답글</h2>");
       reCommentForm.append("<input type='text' id='reCommentInput' placeholder='대댓글을 입력하세요'>");
       reCommentForm.append("<button type='submit'>답글 작성</button>");
       parentComment.append(reCommentForm);
@@ -275,11 +317,13 @@
           // 받아온 대댓글 데이터를 반복문으로 순회하여 각 대댓글을 화면에 추가합니다.
           response.forEach(function(reply) {
             console.log(reply);
+            var reCommentContainer = $("<div>").addClass("reCommentContainer"); // 대댓글을 감싸는 컨테이너 생성
             var reComment = $("<div>").addClass("reComment").attr("data-id", reply.reCommentId).text(reply.reComment); // 대댓글 내용을 담는 div 요소를 생성합니다.
             var editButton = $("<button>").text("수정").addClass("editReComment"); // 수정 버튼 생성
             var deleteButton = $("<button>").text("삭제").addClass("deleteReComment"); // 삭제 버튼 생성
-            reComment.append(editButton, deleteButton); // 대댓글에 수정, 삭제 버튼 추가
-            parentComment.append(reComment); // 부모 댓글에 대댓글을 추가합니다.
+            reCommentContainer.append(reComment); // 대댓글을 컨테이너에 추가합니다.
+            reCommentContainer.append(editButton, deleteButton); // 수정, 삭제 버튼을 컨테이너에 추가합니다.
+            parentComment.append(reCommentContainer); // 부모 댓글에 대댓글을 추가합니다.
           });
         },
         error: function(xhr, status, error) {
@@ -294,6 +338,7 @@
       event.preventDefault(); // 기본 제출 이벤트 막기
       var reCommentContent = $(this).find("#reCommentInput").val();
       var commentId = $(this).parent().attr("data-id"); // 부모 댓글의 ID 가져오기
+      var parentComment = $(this).closest("li"); // 부모 댓글 요소 가져오기
 
       // 대댓글 생성 요청 보내기
       $.ajax({
@@ -303,11 +348,13 @@
         data: JSON.stringify({ reComment: reCommentContent }),
         success: function(response) {
           // 새로운 대댓글을 화면에 추가
+          var reCommentContainer = $("<div>").addClass("reCommentContainer"); // 대댓글을 감싸는 컨테이너 생성
           var reCommentDiv = $("<div>").addClass("reComment").attr("data-id", response.reCommentId).text(response.reComment);
           var editButton = $("<button>").text("수정").addClass("editReComment");
           var deleteButton = $("<button>").text("삭제").addClass("deleteReComment");
-          reCommentDiv.append(editButton, deleteButton);
-          $(event.target).before(reCommentDiv);
+          reCommentContainer.append(reCommentDiv); // 대댓글을 컨테이너에 추가합니다.
+          reCommentContainer.append(editButton, deleteButton); // 수정, 삭제 버튼을 컨테이너에 추가합니다.
+          parentComment.append(reCommentContainer); // 부모 댓글 아래에 대댓글 컨테이너를 추가합니다.
 
           // 입력 폼 비우기
           $(event.target).find("#reCommentInput").val("");
@@ -321,7 +368,7 @@
 
 // 대댓글 수정 버튼 클릭 시
     $("#commentList").on("click", ".editReComment", function() {
-      var reCommentId = $(this).closest(".reComment").attr("data-id"); // 대댓글의 ID 가져오기
+      var reCommentId = $(this).closest(".reCommentContainer").find(".reComment").attr("data-id"); // 대댓글의 ID 가져오기
       var commentId = $(this).closest("li").attr("data-id"); // 부모 댓글의 ID 가져오기
       var editedReComment = prompt("대댓글을 수정하세요:", $(this).closest(".reComment").children(".commentContent").text()); // 수정할 내용 입력 받기
       var that = $(this);
@@ -336,14 +383,14 @@
           success: function(response) {
             alert("대댓글이 수정되었습니다.");
             // 화면 업데이트
-            var reCommentDiv = that.closest(".reComment");
+            var reCommentDiv = that.closest(".reCommentContainer").find(".reComment");
             reCommentDiv.text(editedReComment); // 수정된 내용을 화면에 표시
 
-            // 이미 존재하는 수정, 삭제 버튼을 삭제하고 다시 추가
-            reCommentDiv.find(".editReComment, .deleteReComment").remove();
-            var editButton = $("<button>").text("수정").addClass("editReComment"); // 수정 버튼 생성
-            var deleteButton = $("<button>").text("삭제").addClass("deleteReComment"); // 삭제 버튼 생성
-            reCommentDiv.append(editButton, deleteButton); // 수정, 삭제 버튼 추가
+            // // 이미 존재하는 수정, 삭제 버튼을 삭제하고 다시 추가
+            // reCommentDiv.find(".editReComment, .deleteReComment").remove();
+            // var editButton = $("<button>").text("수정").addClass("editReComment"); // 수정 버튼 생성
+            // var deleteButton = $("<button>").text("삭제").addClass("deleteReComment"); // 삭제 버튼 생성
+            // reCommentDiv.append(editButton, deleteButton); // 수정, 삭제 버튼 추가
           },
           error: function(xhr, status, error) {
             console.error("대댓글 수정에 실패하였습니다.");
@@ -356,7 +403,9 @@
 
 // 대댓글 삭제 버튼 클릭 시
     $("#commentList").on("click", ".deleteReComment", function() {
-      var reCommentId = $(this).parent().attr("data-id"); // 대댓글의 ID 가져오기
+      var reCommentId = $(this).closest(".reCommentContainer").find(".reComment").attr("data-id"); // 대댓글의 ID 가져오기
+      var commentId = $(this).closest("li").attr("data-id"); // 부모 댓글의 ID 가져오기
+      var deleteButton = $(this); // 현재 클릭된 삭제 버튼을 저장
 
       if (confirm("정말로 이 대댓글을 삭제하시겠습니까?")) {
         // 대댓글 삭제 요청 보내기
@@ -364,7 +413,7 @@
           url: "/boards/" + boardId + "/comments/" + commentId + "/recomments/" + reCommentId,
           type: "DELETE",
           success: function(response) {
-            $(event.target).parent().remove();
+            deleteButton.parent().remove();
           },
           error: function(xhr, status, error) {
             console.error("대댓글 삭제에 실패하였습니다.");
